<resources>
    <string name="app_name">DialogDemoApp</string>
    <string name="action_settings">Settings</string>
    <string name="messageButtonText">Message Dialog Example</string>
    <string name="listButtonText">List Dialog Example</string>
    <string name="customButtonText">Custom Dialog Example -Mirror</string>
    <string name="checkListButtonText">Multi Check List Dialog Example</string>
    <string name="TAG_SIMPLE_DIALOG">Simple Dialog</string>
    <string name="dateButtonText">Date Picker Dialog</string>
    <string name="timeButtonText">Time Picker Dialog</string>
</resources>
